welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: not found: value estFacemur
estFacemur()
^Program:5: error: not found: value estFacemur
estFacemur()
^Program:8: error: not found: value estFacemur
estFacemur()
^Program:10: error: not found: value estFacemur
estFacemur()
^