welcome.lessons.welcome.conditions.Conditions.scala.code
estFacemur()
avance()
recule()
estFacemur()
avance()
recule()
estFacemur()
recule()
estFacemur()
avance()




